@@ -12,6 +12,11 @@ Changes in 0.62.13:
     against duplicate troves, proper fileIds used during clones, simultanous
     cloning of multiple troves, and better clonedFrom tracking
   * split conaryclient into pieces
+  * Conary now compresses XML-RPC requests before sending them to the
+    repository server.  In order to use compression, the remote server
+    must be running Conary 0.62.13 or later.  If the server is running
+    an older version, the client will fall back to sending uncompressed
+    requests.
 
 Changes in 0.62.12:
   * Conary will no longer create a "rootroot" group while installing
